# human-friendly-ids-rs

./: .gitignore  .release.toml  Cargo.toml  README.md  deny.toml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  toml.yaml
src/: alphabet.rs  distribution.rs  id.rs  lib.rs
src/snapshots/: human_friendly_ids__alphabet__tests__edge_case_1.snap  human_friendly_ids__alphabet__tests__edge_case_2.snap  human_friendly_ids__alphabet__tests__edge_case_3.snap  human_friendly_ids__alphabet__tests__edge_case_4.snap  human_friendly_ids__alphabet__tests__edge_case_5.snap  human_friendly_ids__alphabet__tests__edge_case_6.snap  human_friendly_ids__alphabet__tests__edge_case_7.snap  human_friendly_ids__alphabet__tests__edge_case_8.snap  human_friendly_ids__alphabet__tests__snapshot_lut.snap  human_friendly_ids__id__serde_impl__tests__serde_roundtrip-2.snap  human_friendly_ids__id__serde_impl__tests__serde_roundtrip.snap
