[package]
name = "human-friendly-ids"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Generate non-visually ambiguous IDs"
readme = "README.md"
repository = "https://github.com/JosiahBull/human-friendly-ids-rs"
keywords = ["ids", "uuid", "human-readable", "human-friendly", "non-ambiguous"]
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
categories = ["algorithms", "encoding", "cryptography"]
documentation = "https://docs.rs/human-friendly-ids"

[dependencies]
rand = { version = "0.9" }
serde = { version = "1", optional = true }
thiserror = { version = "2" }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
mutants = "0.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1.42.2", features = ["json"] }
